# DECONVEILp

./: .gitignore  LICENSE  README.md  fit_gene.py  interpret_results.py  pyproject.toml
bdgdm/: __init__.py  classify.py  classify_old.py  data.py  diagnostics.py  fit.py  fit_model_old_ver.py  inference.py  model.py  plot.py  plot_classification.py  plot_fit.py  plot_prior_posterior.py  posterior.py  ppc.py  preprocessing.py  simulation_validation.py
bdgdm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
bdgdm/data/: crc_res_mcmc_drivers.csv
bdgdm/stan/: bdgdm_single  bdgdm_single.stan
bdgdm/stan/.ipynb_checkpoints/: bdgdm_single-checkpoint.stan
docs/: conf.py  index.md  quickstart.ipynb
notebooks/: bdgdm_test.ipynb  dosage_model_test.ipynb  model_testing.ipynb  ppc_validation.ipynb  simulated_data_test.ipynb  simulation_based_validation.ipynb
notebooks/.ipynb_checkpoints/: model_testing-checkpoint.ipynb  results_interpreter-checkpoint.ipynb  simulation_based_validation-checkpoint.ipynb
python/: fit_model.py  interpret_results.py
scripts/: benchmark_bdgdm_deconveil.py
stan/: bdgdm  bdgdm_subtype  bdgdm_subtype.stan
tests/: interpreter_old.ipynb  ppc_validation.ipynb  simulation_based_validation.ipynb  test_fit_new.ipynb
tests/.ipynb_checkpoints/: test_fit_old-checkpoint.ipynb
